[package]
name = "vk_compute_test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
naga = { version = "27", features = ["spv-out", "wgsl-in"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vulkano = "0.35.2"
